--- a/index.html
+++ b/index.html
@@ -2,11 +2,32 @@
 <html>
 <head>
   <title>Prayer Clock</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="manifest" href="manifest.json">
   <style>
+    body {
+      font-family: helvetica;
+      background-image: url('fondo.jpg');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      color: #fff;
+      margin: 0;
+      padding: 20px;
+    }
+
+    h1 {
+      text-align: center;
+    }
+
     #clock {
       font-size: 48px;
-      font-weight: bold;
+      text-align: center;
       margin-bottom: 20px;
+    }
+
+    #prayer-times {
+      text-align: center;
     }
 
     .prayer-time {
@@ -14,18 +35,75 @@
       margin-bottom: 10px;
     }
 
+    #prayer-change {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      text-align: right;
+      color: white;
+      font-size: 24px;
+    }
+
+    #prayer-change h2 {
+      font-size: 24px;
+      margin-bottom: 10px;
+    }
+
+    #prayer-change label {
+      display: block;
+    }
+
+    #livestream {
+      text-align: center;
+      margin-top: 20px;
+    }
+
+    .livestream-video {
+      width: 100%;
+      max-width: 800px;
+      margin: 0 auto;
+    }
+
+    .notification-list {
+      margin-top: 20px;
+    }
+
     .notification {
-      font-size: 18px;
-      margin-bottom: 5px;
+      background-color: rgba(255, 255, 255, 0.5);
+      padding: 10px;
+      margin-bottom: 10px;
+      border-radius: 5px;
+    }
+
+    /* Media queries for responsive design */
+    @media (max-width: 768px) {
+      body {
+        padding: 10px;
+      }
+
+      h1 {
+        font-size: 24px;
+      }
+
+      #clock {
+        font-size: 32px;
+        margin-bottom: 10px;
+      }
+
+      .prayer-time {
+        font-size: 18px;
+        margin-bottom: 5px;
+      }
     }
   </style>
 </head>
 <body>
-  <h1>Reloj de Oración</h1>
+  <h1>Prayer Clock</h1>
+
   <div id="clock"></div>
 
   <div id="prayer-times">
-    <h2>Tiempos de Oración</h2>
+    <h2>Horarios de los rezos</h2>
     <div class="prayer-time" id="fajr">Fajr: </div>
     <div class="prayer-time" id="dhuhr">Dhuhr: </div>
     <div class="prayer-time" id="asr">Asr: </div>
@@ -33,9 +111,24 @@
     <div class="prayer-time" id="isha">Isha: </div>
   </div>
 
-  <div id="notifications">
-    <h2>Notificaciones</h2>
-    <div id="notification-list"></div>
+  <div id="prayer-change">
+    <h2>Cambiar horarios de rezos</h2>
+    <label for="fajr-time">Fajr: </label>
+    <input type="time" id="fajr-time">
+    <br>
+    <label for="dhuhr-time">Dhuhr: </label>
+    <input type="time" id="dhuhr-time">
+    <br>
+    <label for="asr-time">Asr: </label>
+    <input type="time" id="asr-time">
+    <br>
+    <label for="maghrib-time">Maghrib: </label>
+    <input type="time" id="maghrib-time">
+    <br>
+    <label for="isha-time">Isha: </label>
+    <input type="time" id="isha-time">
+    <br>
+    <button id="save-prayer-times">Guardar cambios</button>
   </div>
 
   <div id="livestream">
@@ -44,6 +137,8 @@
       <iframe width="560" height="315" src="https://www.youtube.com/embed/hrnT2IFqyro" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
   </div>
+
+  <div class="notification-list" id="notification-list"></div>
 
   <script>
     var prayerTimes = {
@@ -90,82 +185,77 @@
         if (currentHour === hour && currentMinute === minute) {
           prayerElement.style.color = 'green';
           currentPrayer = prayerElement.textContent.split(':')[0];
+        } else if (currentHour > hour || (currentHour === hour && currentMinute > minute)) {
+          prayerElement.style.color = 'red';
         } else {
-          prayerElement.style.color = 'black';
+          prayerElement.style.color = 'white';
         }
       }
 
-      if (currentPrayer !== null) {
-        sendNotification('Es hora de ' + currentPrayer);
+      if (currentPrayer && !isNotificationShown()) {
+        showNotification('Es hora de ' + currentPrayer + '!');
+        playAlarmSound();
+        markNotificationShown();
       }
     }
 
-    function sendNotification(message) {
-      var notificationList = document.getElementById('notification-list');
-      var notificationElement = document.createElement('div');
-      notificationElement.textContent = message;
-      notificationElement.className = 'notification';
-      notificationList.appendChild(notificationElement);
+    function showNotification(message) {
+      if ('Notification' in window && Notification.permission === 'granted') {
+        var notification = new Notification('Prayer Clock', {
+          body: message,
+          icon: 'notification.png'
+        });
+
+        var notificationList = document.getElementById('notification-list');
+        var notificationItem = document.createElement('div');
+        notificationItem.classList.add('notification');
+        notificationItem.textContent = message;
+        notificationList.appendChild(notificationItem);
+      }
     }
 
     function requestNotificationPermission() {
       if ('Notification' in window) {
-        Notification.requestPermission().then(function(permission) {
-          if (permission === 'granted') {
-            sendNotification('Notificaciones activadas');
-          }
-        });
+        Notification.requestPermission();
       }
     }
 
+    function isNotificationShown() {
+      return localStorage.getItem('notificationShown') === 'true';
+    }
+
+    function markNotificationShown() {
+      localStorage.setItem('notificationShown', 'true');
+    }
+
+    function playAlarmSound() {
+      var audio = new Audio('alarm.mp3');
+      audio.play();
+    }
+
     function savePrayerTimes() {
-      var fajrTimeInput = document.getElementById('fajr-time');
-      var dhuhrTimeInput = document.getElementById('dhuhr-time');
-      var asrTimeInput = document.getElementById('asr-time');
-      var maghribTimeInput = document.getElementById('maghrib-time');
-      var ishaTimeInput = document.getElementById('isha-time');
+      var fajrTime = document.getElementById('fajr-time').value;
+      var dhuhrTime = document.getElementById('dhuhr-time').value;
+      var asrTime = document.getElementById('asr-time').value;
+      var maghribTime = document.getElementById('maghrib-time').value;
+      var ishaTime = document.getElementById('isha-time').value;
 
-      var fajrTime = fajrTimeInput.value;
-      var dhuhrTime = dhuhrTimeInput.value;
-      var asrTime = asrTimeInput.value;
-      var maghribTime = maghribTimeInput.value;
-      var ishaTime = ishaTimeInput.value;
-
-      var fajrHour = parseInt(fajrTime.split(':')[0]);
-      var fajrMinute = parseInt(fajrTime.split(':')[1]);
-      var dhuhrHour = parseInt(dhuhrTime.split(':')[0]);
-      var dhuhrMinute = parseInt(dhuhrTime.split(':')[1]);
-      var asrHour = parseInt(asrTime.split(':')[0]);
-      var asrMinute = parseInt(asrTime.split(':')[1]);
-      var maghribHour = parseInt(maghribTime.split(':')[0]);
-      var maghribMinute = parseInt(maghribTime.split(':')[1]);
-      var ishaHour = parseInt(ishaTime.split(':')[0]);
-      var ishaMinute = parseInt(ishaTime.split(':')[1]);
-
-      prayerTimes.fajr = { hour: fajrHour, minute: fajrMinute };
-      prayerTimes.dhuhr = { hour: dhuhrHour, minute: dhuhrMinute };
-      prayerTimes.asr = { hour: asrHour, minute: asrMinute };
-      prayerTimes.maghrib = { hour: maghribHour, minute: maghribMinute };
-      prayerTimes.isha = { hour: ishaHour, minute: ishaMinute };
+      prayerTimes.fajr = { hour: parseInt(fajrTime.split(':')[0]), minute: parseInt(fajrTime.split(':')[1]) };
+      prayerTimes.dhuhr = { hour: parseInt(dhuhrTime.split(':')[0]), minute: parseInt(dhuhrTime.split(':')[1]) };
+      prayerTimes.asr = { hour: parseInt(asrTime.split(':')[0]), minute: parseInt(asrTime.split(':')[1]) };
+      prayerTimes.maghrib = { hour: parseInt(maghribTime.split(':')[0]), minute: parseInt(maghribTime.split(':')[1]) };
+      prayerTimes.isha = { hour: parseInt(ishaTime.split(':')[0]), minute: parseInt(ishaTime.split(':')[1]) };
 
       updatePrayerTimes();
     }
 
-    function init() {
-      updateClock();
-      updatePrayerTimes();
-      requestNotificationPermission();
+    setInterval(updateClock, 1000);
+    setInterval(updatePrayerTimes, 1000);
 
-      var savePrayerTimesButton = document.getElementById('save-prayer-times');
-      savePrayerTimesButton.addEventListener('click', savePrayerTimes);
+    document.getElementById('save-prayer-times').addEventListener('click', savePrayerTimes);
 
-      setInterval(function() {
-        updateClock();
-        updatePrayerTimes();
-      }, 1000);
-    }
-
-    init();
+    // Request notification permission
+    requestNotificationPermission();
   </script>
 </body>
 </html>
